<resources>
    <string name="app_name">File Manager</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="storage">Storage</string>
    <string name="details">Details</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="downloads">Downloads</string>
    <string name="documents">Documents</string>
    <string name="recents">Recents</string>
    <string name="recent">Recent</string>
    <string name="search">Search</string>
    <string name="search_here">Search Here</string>
    <string name="no_file_text">No Files</string>
    <string name="error">Error</string>
    <string name="search_data">searchData</string>
</resources>