<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
            android:layout_marginVertical="@dimen/cardView_vertical_margin"
            android:layout_weight="1"
            android:background="@color/cardView_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardView_color"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginVertical="@dimen/cardView_vertical_margin"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fadingEdge="horizontal|vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginBottom="4dp"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/images" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
            android:layout_marginVertical="@dimen/cardView_vertical_margin"
            android:layout_weight="1"
            android:background="@color/cardView_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardView_color"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView

                    android:id="@+id/iv_video"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginVertical="@dimen/cardView_vertical_margin"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fadingEdge="horizontal|vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_video" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginBottom="4dp"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/videos" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
            android:layout_marginVertical="@dimen/cardView_vertical_margin"
            android:layout_weight="1"
            android:background="@color/cardView_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:gravity="center"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardView_color"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_audio"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginVertical="@dimen/cardView_vertical_margin"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fadingEdge="horizontal|vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_audio" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginBottom="4dp"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/audios" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_one">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
            android:layout_marginVertical="@dimen/cardView_vertical_margin"
            android:layout_weight="1"
            android:background="@color/cardView_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardView_color"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_downloads"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginVertical="@dimen/cardView_vertical_margin"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fadingEdge="horizontal|vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_download" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginBottom="4dp"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/downloads" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_documents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
            android:layout_marginVertical="@dimen/cardView_vertical_margin"
            android:layout_weight="1"
            android:background="@color/cardView_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardView_color"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView

                    android:id="@+id/iv_documents"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginVertical="@dimen/cardView_vertical_margin"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fadingEdge="horizontal|vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_document" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/documents" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_recents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
            android:layout_marginVertical="@dimen/cardView_vertical_margin"
            android:layout_weight="1"
            android:background="@color/cardView_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardView_color"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_recents"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginVertical="@dimen/cardView_vertical_margin"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fadingEdge="horizontal|vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_recent" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/cardView_horizontal_margin"
                    android:layout_marginBottom="4dp"
                    android:background="@color/cardView_color"
                    android:backgroundTint="@color/cardView_color"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/recent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>